cluster-resources/services/medicine-assistant/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: medicine-assistant-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts: [medass.golebiowski.dev]
      secretName: letsencrypt-prod-medicine-assistant-tls-secret
  rules:
    - host: medass.golebiowski.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: medicine-assistant-service
                port:
                  number: 3000
